--- a/Packaging-ML-Models/packaging-ml-model/MANIFEST.in
+++ b/Packaging-ML-Models/packaging-ml-model/MANIFEST.in
@@ -5,4 +5,9 @@ recursive-include ./prediction_model/*
 
 include prediction_model/datasets/*.csv
 include prediction_model/trained_models/*.pkl
+include prediction_model/processing/*.py
 
+include ./tests/*
+
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
