--- a/ml-ci-cd-jenkins/src/requirements.txt
+++ b/ml-ci-cd-jenkins/src/requirements.txt
@@ -11,3 +11,9 @@ threadpoolctl==3.5.0
 tzdata==2024.1
 wheel==0.43.0
 pytest==7.4.2
+setuptools == 67.8.0
+wheel==0.38.4
+fastapi==0.103.0
+pydantic==2.4.2
+uvicorn==0.23.2
+gunicorn==21.2.0
